Fixed terminal covering header on scroll

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   font-size: 16px;
   top: 0;
   width: 100%;
+  z-index: 1000;
   position: fixed;
 }
 
